--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
+        "axios": "^1.7.7",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "vite": "^5.0"
     },
     "dependencies": {
+        "alpinejs": "^3.14.3",
+        "dropzone": "^6.0.0-beta.2",
         "flatpickr": "^4.6.13",
         "flowbite": "^2.5.2"
     }
