--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "alpinejs": "^3.14.3",
         "dropzone": "^6.0.0-beta.2",
         "flatpickr": "^4.6.13",
-        "flowbite": "^2.5.2"
+        "flowbite": "^2.5.2",
+        "simple-datatables": "^9.2.1"
     }
 }
