--- a/package.json
+++ b/package.json
@@ -14,6 +14,19 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@editorjs/checklist": "^1.6.0",
+        "@editorjs/delimiter": "^1.4.2",
+        "@editorjs/editorjs": "^2.30.7",
+        "@editorjs/embed": "^2.7.6",
+        "@editorjs/header": "^2.8.8",
+        "@editorjs/image": "^2.10.1",
+        "@editorjs/link": "^2.6.2",
+        "@editorjs/list": "^2.0.2",
+        "@editorjs/quote": "^2.7.4",
+        "@editorjs/raw": "^2.5.0",
+        "@editorjs/table": "^2.4.2",
+        "@editorjs/warning": "^1.4.1",
+        "@tailwindcss/typography": "^0.5.15",
         "alpinejs": "^3.14.3",
         "dropzone": "^6.0.0-beta.2",
         "flatpickr": "^4.6.13",
