--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@editorjs/warning": "^1.4.1",
         "@tailwindcss/typography": "^0.5.15",
         "alpinejs": "^3.14.3",
+        "apexcharts": "^4.1.0",
         "dropzone": "^6.0.0-beta.2",
         "flatpickr": "^4.6.13",
         "flowbite": "^2.5.2",
